EXTRA_DIST = 				\
	add-options.ui			\
	app-menu.ui			\
	batch-add-files.ui		\
	batch-password.ui		\
	delete.ui			\
	error-dialog.ui			\
	menus-toolbars.ui		\
	message-dialog.ui		\
	new-archive-dialog-options.ui	\
	password.ui			\
	progress-dialog.ui		\
	properties.ui			\
	request-dialog.ui		\
	update.ui

-include $(top_srcdir)/git.mk
