EXTRA_DIST = 				\
	add-dialog-options.ui		\
	add-options.ui			\
	app-menu.ui			\
	ask-password.ui			\
	delete.ui			\
	error-dialog.ui			\
	extract-dialog-options.ui	\
	file-selector.ui		\
	menus-toolbars.ui		\
	message-dialog.ui		\
	new-archive-dialog.ui		\
	new-archive-dialog-options.ui	\
	password.ui			\
	progress-dialog.ui		\
	properties.ui			\
	request-dialog.ui		\
	update.ui

-include $(top_srcdir)/git.mk
