EXTRA_DIST = 				\
	add-dialog-options.ui		\
	add-options.ui			\
	app-menu.ui			\
	app-menubar.ui			\
	ask-password.ui			\
	delete.ui			\
	extract-dialog-options.ui	\
	file-selector.ui		\
	gears-menu.ui			\
	menus.ui			\
	menus-toolbars.ui		\
	new-archive-dialog.ui		\
	password.ui			\
	progress-dialog.ui		\
	properties.ui			\
	request-dialog.ui		\
	update.ui

-include $(top_srcdir)/git.mk
